Add review functionality added in View Review section. and Few Buttons updated......

--- a/MediaReviews/Pages/AddReview.cshtml
+++ b/MediaReviews/Pages/AddReview.cshtml
@@ -34,5 +34,7 @@
         <input asp-for="Review.DateReviewed" type="date" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Submit Review</button>
+    
+    <a asp-page="/ViewReviews" class="btn btn-secondary">Cancel</a>
 </form>
 
