Index page updated!!!

--- a/MediaReviews/Pages/Index.cshtml
+++ b/MediaReviews/Pages/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @model MediaReviews.Pages.IndexModel
 
-<h1>Welcome to Media Reviews</h1>
+<h1 >Welcome to Media Reviews</h1>
 <nav>
-    <a href="/ViewReviews">View Reviews</a>
-    <a href="/AddReview">Add Review</a>
+    <a asp-page="/ViewReviews" class="btn btn-success btn-sm">View Reviews</a>
+    <a asp-page="/AddReview" class="btn btn-success btn-sm">Add Review</a>
 </nav>
